# SuperMarioBrosCloneSFML

./: CMakeLists.txt  README.md  main.cpp
data/World/: level1.txt
include/: Game.h  Player.h
include/Coins/: Coins.h
include/Enemies/: Enemy.h  Goomba.h  PiranhaPlant.h  Spikie.h
include/UI/: UIManager.h
include/World/: World.h
scripts/: build_Debug.bat  build_release.bat  generate.bat
source/: Game.cpp  Player.cpp
source/Coins/: Coins.cpp
source/Enemies/: Enemy.cpp  Goomba.cpp  PiranhaPlant.cpp  Spikie.cpp
source/UI/: UIManager.cpp
source/World/: World.cpp
